# generic_render_engine_openGL

./: CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/assets/models/asteroid/: asteroid.gltf
src/assets/models/spaceship/: basic_spaceship.gltf
src/assets/models/sphere/: sphere.gltf
src/assets/shaders/: ambient_light_deferred.fs  copy.fs  deffered_point_light.fs  model_render_deferred_HDR.fs  model_transform.vs  tone_mapper.fs
src/headers/: basic_shader.hpp  ibasic_renderer.hpp  input.hpp  irender_object.hpp  ispatial_render_object.hpp  mesh.hpp  model.hpp  model_render_object.hpp  render_params.hpp  render_shader.hpp  render_target_group.hpp  timing.hpp
src/headers/code/: test_scene.hpp
src/headers/lib/: render_params.hpp
src/headers/lib/render_objects/: deferred_point_light.hpp  irender_object.hpp  ispatial_render_object.hpp  model.hpp  model_render_object.hpp  render_target_group.hpp  screen_render_object.hpp
src/headers/lib/rendering/: deferred_renderer.hpp  gbuffer.hpp  irenderer.hpp
src/headers/lib/scene_interfaces/: ideferred_hdr_scene.hpp
src/headers/lib/shading/: basic_shader.hpp
src/headers/lib/shading/shaders/: default_shaders.hpp
src/headers/render_objects/: deferred_point_light.hpp  deffered_point_light.hpp  model.hpp  render_target_group.hpp  screen_render_object.hpp
src/headers/rendering/: deferred_renderer.hpp  deffered_renderer.hpp  frame_buffer_object.hpp  gbuffer.hpp  gbuffer_renderer.hpp  ibasic_renderer.hpp  iframe_buffer_object.hpp  ping_pong_buffer_renderer.hpp
src/headers/shading/: basic_shader.hpp  render_shader.hpp
src/headers/shading/shaders/: default_shaders.hpp
src/sources/: basic_shader.cpp  default_shaders.cpp  deferred_point_light.cpp  deferred_renderer.cpp  deffered_point_light.cpp  gbuffer.cpp  gbuffer_renderer.cpp  ideferred_hdr_scene.cpp  mesh.cpp  model.cpp  model_render_object.cpp  ping_pong_buffer_renderer.cpp  render_shader.cpp  render_target_group.cpp  screen_render_object.cpp
src/sources/code/: test_scene.cpp
src/sources/lib/render_objects/: deferred_point_light.cpp  model.cpp  model_render_object.cpp  screen_render_object.cpp
src/sources/lib/rendering/: deferred_renderer.cpp  gbuffer.cpp  ping_pong_buffer_renderer.cpp
src/sources/lib/shading/shaders/: default_shaders.cpp
